package pl.zzpj.auth_server.entity;

public enum UserRole {
  ADMIN,
  USER
}
