package pl.zzpj.subscription_service.domain.token;

public enum TokenOperation {
  CAPACITY_CHECK,
  DETECT,
  EXTRACT,
  VISUALIZE,
  EMBED_768,
  EMBED_1024,
  AI_CLASSIFICATION
}
