@startuml
skinparam dpi 150
skinparam class {
  BackgroundColor LightYellow
  BorderColor Orange
  ArrowColor Black
}
skinparam interface {
  BackgroundColor LightCyan
  BorderColor DarkCyan
}
skinparam enum {
  BackgroundColor LightPink
  BorderColor Red
}

package "auth-server :: Domain Entities" {
  class User <<entity>> {
    - Long id
    - String username
    - String email
    - String password
    - UserRole role
  }

  enum UserRole {
    ADMIN
    USER
  }

  User --> UserRole
}

package "subscription-service :: Domain Model" {
  class SubscriptionPlan <<record>> {
    - PlanCode code
    - int monthlyTokens
    - Set<TokenOperation> allowedOperations
    + boolean allows(TokenOperation op)
  }

  enum PlanCode {
    FREE
    STANDARD
    PRO
    + boolean canUpgradeTo(PlanCode target)
  }

  class ActiveSubscription <<record>> {
    - String userId
    - PlanCode planCode
    - Instant activeFrom
    - Instant activeUntil
    + boolean isExpiredAt(Instant instant)
  }

  enum TokenOperation {
    CAPACITY_CHECK
    DETECT
    EXTRACT
    VISUALIZE
    EMBED_768
    EMBED_1024
    AI_CLASSIFICATION
  }

  class TokenBalance <<record>> {
    - String userId
    - int availableTokens
    - int reservedTokens
    + boolean canReserve(int tokens)
    + TokenBalance reserve(int tokens)
    + TokenBalance consumeReserved(int tokens)
    + TokenBalance releaseReserved(int tokens)
  }

  class TokenReservation <<record>> {
    - UUID reservationId
    - String userId
    - TokenOperation operation
    - int tokens
    - Instant expiresAt
  }

  class TokenReservationEntity <<entity>> {
    - UUID id
    - TokenReservationStatus status
    - Instant createdAt
    - Instant expiresAt
    - Instant completedAt
    + TokenReservation toDomain()
  }

  enum TokenReservationStatus {
    RESERVED
    CONSUMED
    RELEASED
  }

  interface TokenDecision <<sealed>>
  class Accepted <<record>> implements TokenDecision {
    - TokenReservation reservation
  }
  class RejectedInsufficientTokens <<record>> implements TokenDecision
  class RejectedOperationNotAllowed <<record>> implements TokenDecision
  class RejectedSubscriptionExpired <<record>> implements TokenDecision
  class RejectedPlanNotFound <<record>> implements TokenDecision

  class PaymentSession <<record>> {
    - UUID id
    - String userId
    - PlanCode targetPlan
    - Status status
    - Instant createdAt
    - Instant updatedAt
  }

  enum "PaymentSession.Status" as PaymentStatus {
    PENDING
    SUCCEEDED
    FAILED
    CANCELLED
  }

  ActiveSubscription --> PlanCode
  SubscriptionPlan --> PlanCode
  SubscriptionPlan --> TokenOperation
  TokenReservation --> TokenOperation
  Accepted --> TokenReservation
  TokenReservationEntity ..> TokenReservation : maps
  TokenReservationEntity --> TokenReservationStatus
  PaymentSession --> PlanCode
  PaymentSession --> PaymentStatus
}

package "watermark-service-py :: Modules" {
  class "watermark.py" as watermark <<module>> {
    + embed_text(image_bytes, text, owner, app_key) : WatermarkResult
    + detect_text(image_bytes, app_key) : DetectionResult
    + visualize(image_bytes, app_key) : bytes
    + capacity_report(image_bytes, owner) : CapacityReport
    + select_length_bits(width, height) : int
  }

  class "crypto.py" as crypto <<module>> {
    + seal(owner, text, app_key) : bytes
    + unseal(blob, app_key) : DecodedEnvelope
    + max_text_bytes(length_bits, owner) : int
  }

  watermark ..> crypto : AES-GCM + Reed-Solomon
}
@enduml
